--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,15 @@ footer{
     padding: 0;
 }
 
+
+#times > div{
+
+    width: 100%;
+    clear: both;
+    height: 150px;
+    padding: 0;
+}
+
 hr{
     display: none;
 }
@@ -308,4 +317,18 @@ hr{
 
     text-align: center;
     padding: 0 20px;
+}
+
+#photos{
+    column-count: 3;
+}
+
+/* for small screen sizes 800px and down */
+
+@media screen and (max-width: 800px){
+
+    #photos{
+        column-count: 2;
+    }
+
 }
